# rthings

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
axum-example/: Cargo.toml
axum_work/: Cargo.toml
axum_work/src/: main.rs
calc/src/: main.rs
catp/: Cargo.toml  text.sh
catp/src/: main.rs
catp/tests/: cli.rs
cli_books/echop/: Cargo.toml  outs.sh
cli_books/echop/src/: main.rs
cli_books/echop/tests/: cli.rs
cli_books/hello/tests/: cli.rs
comzip/: Cargo.toml
comzip/src/: main.rs
crash-course/: Cargo.toml  closures.md  generics.md  lifetime.md  loop.md  reference-method.md  slice.md  trait-notes.md
crash-course/src/: array.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointer_ref.rs  print.rs  string.rs  structs.rs  traits.rs  tuple.rs  types.rs  use_directive.rs  vars.rs  vectors.rs
csv_json/data/: data.csv  data.json
csv_json/src/: main.rs
decom/src/: main.rs
del_branches/: Cargo.toml
del_branches/src/: main.rs
echop/tests/: cli.rs
encode/: Cargo.toml
epoch/: Cargo.toml
epoch/src/: main.rs
epoch_converter/: Cargo.toml  Taskfile.yml
epoch_converter/src/: epoch.rs  errors.rs  lib.rs
gentype/: Cargo.toml  types.d.ts
gentype/src/: main.rs  types.rs
headp/: Cargo.toml  gen-text.sh
headp/tests/: cli.rs
headp/tests/expected/: all.n2.out  all.n4.out  all.out
hello/: Cargo.toml
hello/src/: main.rs
hello/tests/: cli.rs
jsrun/: Cargo.toml
merge_img/: Cargo.toml
merge_img/src/: main.rs
mini-http/: Cargo.toml
mini-http/src/: date.rs  lib.rs  main.rs  request.rs  response.rs
minigrep/src/: lib.rs  main.rs
newsletter/: Cargo.toml  config.yaml  docker-compose.yaml
newsletter/src/: lib.rs  main.rs
newsletter/tests/: health.rs
parse_tab/src/: main.rs
projects/add_js_ext/: Cargo.toml
projects/add_js_ext/src/: main.rs
projects/add_js_ext/tests/ts/: index.ts
projects/add_js_ext/tests/ts/a/: hello_world.ts  index.ts
projects/add_js_ext/tests/ts_original/: index.ts
projects/add_js_ext/tests/ts_original/c/: index.ts
projects/calc/src/: allocator.rs  expr.rs  lexer.rs  main.rs  parser.rs  token.rs  values.rs  vm.rs
projects/calc/tests/: basic.crs
projects/cat/: Cargo.toml
projects/cjs_esm/: Cargo.toml  README.md
projects/cjs_esm/src/: error.rs  lib.rs  main.rs
projects/cjs_esm/src/command/: add_js.rs  mod.rs
projects/cjs_esm/tests/ts/b/: index.ts
projects/comzip/docs/: lorem.txt
projects/comzip/src/: main.rs
projects/csv_json/: Cargo.toml
projects/csv_json/src/: main.rs
projects/decom/: Cargo.toml
projects/gentype/: Cargo.toml
projects/head/: Cargo.toml
projects/headp/src/: main.rs
projects/headp/tests/: cli.rs
projects/headp/tests/inputs/: twelve.txt
projects/image_enhance/: Cargo.toml
projects/image_enhance/src/: main.rs  network.rs
projects/json-parser/: Cargo.toml
projects/json-parser/src/: error.rs  json_value.rs  lexer.rs  main.rs  parser.rs
projects/json-parser/tests/json/: simple.json
projects/jsonview/: Cargo.toml
projects/jsonview/src/: app.rs  main.rs
projects/langchain_ollama/: .env  Cargo.toml  README.md
projects/langchain_ollama/src/: cli.rs  main.rs  state.rs
projects/merge_img/src/: args.rs  main.rs
projects/minigrep/src/: lib.rs  main.rs
projects/minijinja/: Cargo.toml
projects/minijinja/src/: ast.rs  filters.rs  macros.rs  main.rs  parser.rs  values.rs  vm.rs
projects/miniredis/src/: frame.rs
projects/newsletter/: Cargo.toml  Makefile  docker-compose.yaml  justfile
projects/newsletter/migrations/: 20240506201809_create_subscriptions_table.sql
projects/newsletter/src/: config.rs  main.rs  startup.rs
projects/newsletter/src/routes/: health.rs  subscriptions.rs
projects/newsletter/tests/: health.rs
projects/newsletter/tests/api/: health.rs  helpers.rs
projects/parse_tab/: Cargo.toml
projects/parse_tab/src/: output.json
projects/rditoki/: Cargo.toml
projects/readir/src/: dir.rs  main.rs
projects/remove_uid/src/: main.rs
projects/rename_ts/: Cargo.toml
projects/rename_ts/src/: main.rs
projects/rfeatures/: Cargo.toml
projects/rfeatures/src/: main.rs
projects/secra/: .env  Cargo.toml  Dockerfile  README.md
projects/secra/migrations/: 20240609160838_db_setup.sql  20240609160928_init_schema.sql
projects/secra/src/: errors.rs  lib.rs  main.rs
projects/secra/src/models/: audit_log_entry.rs  mod.rs  secret.rs  token.rs
projects/secra/src/routes/: health.rs  mod.rs  secret.rs
projects/speednet/: Cargo.toml
projects/speednet/src/: main.rs
projects/tubed/: Cargo.toml  README.md
projects/tubed/src/: main.rs
projects/yadt/: .gitignore  Cargo.toml  LICENCE  README.md  package-lock.json  package.json
projects/yadt/src/: main.rs  palette.rs
projects/yadt/themes/: ref.json  yadt-color-theme.json
rditoki/: Cargo.toml  README.md
rditoki/src/: db.rs  frame.rs  lib.rs
readir/: Cargo.toml
readir/src/: dir.rs  lib.rs  main.rs
remove_uid/: Cargo.toml
remove_uid/src/: main.rs
rename_ts/: Cargo.toml
rename_ts/src/: main.rs
rodo/: Cargo.toml
rust-books/guessing_game/src/: main.rs
rust-books/test-crates/: Cargo.toml
rust-books/test-crates/restaurant/src/: lib.rs
rust-books/test-project/src/: main.rs
rust-web/hackernews/: Cargo.toml
rust-web/hackernews/src/: fetch.rs  main.rs
rust-web/hello-rocket/: Cargo.toml
rust-web/hello-rocket/src/: main.rs
rust_example/: data_types  main
rust_example/src/: data_types.rs  loop.rs  main.rs
test_wrapper/test-wrapper/: Cargo.toml
test_wrapper/test-wrapper/src/: lib.rs
test_wrapper/test-wrapper/tests/: one.rs  two.rs
test_wrapper/wrapper-gen/: Cargo.toml
test_wrapper/wrapper-gen/src/: lib.rs
twitter/: Cargo.toml
twitter/backend/: Cargo.toml
twitter/backend/src/: main.rs
weather/src/: main.rs
