[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
axum = "0.6.20"
# async HTTP client
reqwest = { version = "0.11.22", features = ["json"] }
# serialization/deserialization  for JSON
serde = "1.0.189"
# database access
sqlx = "0.7.2"
# async runtime
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
cargo-watch = "8.4.1"
