[package]
name = "mini-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
httparse = "1.8.0"
log = "0.4.21"
net2 = "0.2.39"
time = "0.3.36"
tokio-core = "0.1.18"
tokio-io = "0.1.13"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"

[dev-dependencies]
rustc-serialize = "0.3.25"
num_cpus = "1.16.0"
env_logger = { version = "0.11.3", default-features = false }
serde_json = "1.0.115"
