[package]
name = "mini-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.37"
httparse = "1.8.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.115"

[dev-dependencies]
