[package]
name = "image_enhance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
image = "0.12"
bytevec = "0.2"
alumina = { version = "0.1.1", features = ["images"] }
clap = { version = "4.5.6", features = ["derive"] }
