[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.12"
once_cell = "1.19"
