[package]
name = "rditoki"
edition = "2021"
version = "0.1.0"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/reditoki/0.1.0/reditoki/"
repository = "https://github.com/tduyng/rthings/reditoki"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "reditoki-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "reditoki-server"
path = "src/bin/server.rs"

[dependencies]
atoi = "2.0.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
