[package]
name = "secra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "chrono",
    "ipnetwork",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
