[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes", "unstable"] }
tide = "0.16.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15"
pretty_env_logger = "0.5.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
thiserror = "1"
futures = { version = "0.3", features = ["compat"] }
rand = "0.8.5"
argonautica = "0.2"
failure = "0.1"
regex = "1"
lazy_static = "1"
shared = { path = "../shared", version = "0.1.0" }
async-trait = "0.1"

[dev-dependencies]
assert-json-diff = "2.0.2"